--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,100 @@
+
+
 .App {
   text-align: center;
+  font-family: 'Poppins',sans-serif;
+
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.heading{
+  font-size: 3rem;
+
+  font-weight: 500;
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  
+}
+.title{
+  display: flex;
+  align-items: baseline;
+  gap: 1rem;
+}
+.text-white{
+  color: whitesmoke;
+}
+.text-info{
+  font-size: 22px;
+  width: 67%;
+  margin-top: -83px;
+}
+.main-section{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8rem;
+}
+form{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.form-input{
+  height: 30px;
+  width: 34%;
+  font-family: 'Poppins',sans-serif;
+}
+.form-submit{
+  height: 31px;
+  width: 10%;
+  border: none;
+  font-family: 'Poppins',sans-serif;
+  border-radius: 20px;
+  background-color: #153462;
+  color: whitesmoke;
+  cursor: pointer;
+}
+/* .task-section{
+  display: flex;
+  flex-wrap: wrap;
+} */
+.task{
+  border: 2px solid #104fc1;
+  width: 24%;
+  background: #104fc1;
+  color: whitesmoke;
+  border-radius: 28px;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8rem;
+    height: 53px;
+
+}
+/* mr rager */
+.mr-rager{
+  height: 30rem;
+}
+.icon{
+  color: whitesmoke;
+  height: 20px;
+  font-size: 1.5rem;
+  display: flex;
+  gap: 10px;
+}
+.tasks-section{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -34,5 +124,13 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+/* tablets */
+@media screen and (max-width: 992px) {
+  .main-section{
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
